# vobes

./: .gitignore  Cargo.toml  LICENSE  README.md  vobes.example.toml  vobes.toml
.github/workflows/: ci.yml  release.yml
crates/vobes-activity/: Cargo.toml
crates/vobes-activity/src/: lib.rs
crates/vobes-activity/tests/: tracker.rs
crates/vobes-cli/: Cargo.toml
crates/vobes-cli/src/: app.rs  lib.rs  main.rs  output.rs
crates/vobes-cli/src/commands/: add.rs  context.rs  export.rs  init.rs  list.rs  log.rs  mod.rs  open.rs  reset.rs  rm.rs  scan.rs  shared.rs  show.rs  sync.rs  watch.rs
crates/vobes-config/: Cargo.toml
crates/vobes-config/src/: lib.rs  model.rs  paths.rs
crates/vobes-config/tests/: config.rs
crates/vobes-core/: Cargo.toml
crates/vobes-core/src/: activity.rs  error.rs  git.rs  lib.rs  path.rs  vobe.rs
crates/vobes-core/tests/: models.rs
crates/vobes-git/: Cargo.toml  build.rs
crates/vobes-git/src/: lib.rs
crates/vobes-mcp/: Cargo.toml
crates/vobes-mcp/src/: main.rs
crates/vobes-scan/: Cargo.toml
crates/vobes-scan/src/: detector.rs  exclude.rs  lib.rs  scanner.rs
crates/vobes-scan/src/detector/: framework.rs  language.rs  package.rs  repo.rs
crates/vobes-scan/tests/: detection.rs  scanner.rs
crates/vobes-store/: Cargo.toml
crates/vobes-store/src/: json.rs  lib.rs  model.rs  schema.rs  sqlite.rs
crates/vobes-store/tests/: filter.rs  sqlite.rs
design/: 01-overview.md  02-ethos.md  03-ux.md  04-architecture.md  10-vobe.md  11-activity.md  12-git.md  20-shared-core.md  21-platforms.md  22-scanning.md  23-configuration.md  24-storage.md  25-technology.md  30-repo-structure.md  31-phases.md  32-dependencies.md  40-cross-platform.md  41-ai-integration.md  README.md
desktop/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
desktop/src/: App.svelte  app.css  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  ctx.rs  dto.rs  lib.rs  main.rs
