[package]
name = "vobes-git"
description = "Vobes Git interaction — read-only status surfacing."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
vobes-core = { workspace = true }
git2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }