[package]
name = "vobes-scan"
description = "Vobes scanning engine — directory walk, repo/framework/language/package detection."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
vobes-core = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }