[package]
name = "vobes-desktop"
description = "Vobes — desktop command center."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
vobes-core = { workspace = true }
vobes-config = { workspace = true }
vobes-scan = { workspace = true }
vobes-git = { workspace = true }
vobes-store = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]